# learn-rust

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
adder/src/: lib.rs
art/src/: lib.rs  main.rs
closures/src/: main.rs
collections/src/: main.rs
comprehensive-rust/day1/: Cargo.toml
comprehensive-rust/day1/arrays-and-for-loops/: Cargo.toml
comprehensive-rust/day1/arrays-and-for-loops/src/: main.rs
comprehensive-rust/day1/implicit-conversions/: Cargo.toml
comprehensive-rust/day1/implicit-conversions/src/: main.rs
comprehensive-rust/day1/luhn-algorithm/src/: main.rs
comprehensive-rust/day1/src/: main.rs
comprehensive-rust/day1/storing-books/src/: main.rs
comprehensive-rust/day2/: Cargo.toml
comprehensive-rust/day2/health-statistics/src/: main.rs
comprehensive-rust/day2/points-and-polygons/: Cargo.toml
comprehensive-rust/day2/storing-books/: Cargo.toml
comprehensive-rust/day2/storing-books/src/: main.rs
comprehensive-rust/day2/strings-and-iterators/: Cargo.toml
comprehensive-rust/exercise/: Cargo.toml
comprehensive-rust/exercise/src/: main.rs
control_flow/src/: main.rs
enums/src/: main.rs
errors/src/: main.rs
exercises/: Cargo.toml
exercises/src/: employees.rs  numbers.rs  piglatin.rs
functions/src/: main.rs
generics/src/: main.rs
guessing_game/src/: lib.rs  main.rs
iterators/src/: lib.rs  main.rs
lifetimes/src/: main.rs
loops/src/: main.rs
minigrep/src/: lib.rs  main.rs
ownership/src/: main.rs
restaurant/src/: front_of_house.rs  lib.rs
shirt_giveaway/: Cargo.toml
slices/src/: main.rs
structs/src/: main.rs
structs_example/: Cargo.toml
structs_example/src/: main.rs
tetris/: Cargo.toml  index.html
tetris/src/: lib.rs  shape.rs  tetris.rs
traits/: Cargo.toml
traits/src/: lib.rs  main.rs
variables/src/: main.rs
(+2 files in other folders)
