[workspace]
members = [
    "adder",
    "collections",
    "control_flow",
    "enums",
    "errors",
    "exercises",
    "functions",
    "generics",
    "guessing_game",
    "hello_cargo",
    "lifetimes",
    "loops",
    "minigrep",
    "ownership",
    "restaurant",
    "slices",
    "structs",
    "structs_example",
    "traits",
    "variables"
]
