[workspace]
members = [
    "adder",
    "closures",
    "collections",
    "control_flow",
    "enums",
    "errors",
    "exercises",
    "functions",
    "generics",
    "guessing_game",
    "hello_cargo",
    "iterators",
    "lifetimes",
    "loops",
    "minigrep",
    "ownership",
    "restaurant",
    "shirt_giveaway",
    "slices",
    "structs",
    "structs_example",
    "traits",
    "variables"
]
