[workspace]
members = [
    "adder",
    "art",
    "closures",
    "collections",
    "control_flow",
    "enums",
    "errors",
    "exercises",
    "functions",
    "generics",
    "guessing_game",
    "hello_cargo",
    "iterators",
    "lifetimes",
    "loops",
    "minigrep",
    "my_crate",
    "ownership",
    "restaurant",
    "shirt_giveaway",
    "slices",
    "structs",
    "structs_example",
    "traits",
    "variables"
]
