[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
itertools = "0.13.0"
js-sys = "0.3.72"
rand = "0.8.5"
wasm-bindgen = "0.2.95"
wasm-react = "0.6.0"
web-sys = { version = "0.3.73", features = [
    "Document",
    "Window",
    "HtmlElement",
    "Element"
] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
